--- a/main_article/main_article_bib.bib
+++ b/main_article/main_article_bib.bib
@@ -71,3 +71,33 @@
   year={2020},
   publisher={Cold Spring Harbor Laboratory Press}
 }
+
+@article{pand_flu,
+title = {Non-pharmaceutical public health measures for mitigating the risk and impact
+of epidemic and pandemic influenza},
+year = {2019},
+author  ={{World Health Organisation}}
+}
+
+@article{anderson2020will,
+  title={How will country-based mitigation measures influence the course of the COVID-19 epidemic?},
+  author={Anderson, Roy M and Heesterbeek, Hans and Klinkenberg, Don and Hollingsworth, T D{\'e}irdre},
+  journal={The Lancet},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{yougov,
+  title={Coronavirus: how do attitudes differ across the world?},
+  author={YouGov},
+  journal={Yougov.co.uk},
+  year={2020}
+}
+
+@article{zhang2020impact,
+  title={The impact of social distancing and epicenter lockdown on the COVID-19 epidemic in mainland China: A data-driven SEIQR model study},
+  author={Zhang, Yuzhen and Jiang, Bin and Yuan, Jiamin and Tao, Yanyun},
+  journal={medRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
