--- a/main_article/main_article.Rmd
+++ b/main_article/main_article.Rmd
@@ -13,7 +13,7 @@ author:
       institute: imp
   - Sabine Van Elsand:
       institute: imp
-  - Keisha Prem:
+  - Kiesha Prem:
       institute: lshtm
   - Yang Liu:
       institute: lshtm
@@ -21,7 +21,7 @@ author:
       institute: imp
 institute:
   - imp: MRC Centre for Global Infectious Disease Analysis, Imperial College London, London, UK
-  - lshtm: London School of Hygiene, London, UK
+  - lshtm: Centre for Mathematical Modelling of Infectious Diseases, London School of Hygiene & Tropical Medicine, London, UK
   - joint: These authors contributed equally.
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: 
@@ -80,17 +80,21 @@ or nationally, are likely to have greater impact on reducing the potential epide
 
 # Introduction
 
-As of the `r format(Sys.Date(), "%d/%b/%2020")`, over XXXX cases of coronavirus disease (COVID-19) have been confirmed globally across XX countries. Sustained human-to-human spread has now been observed in multiple countries or regions outside of mainland China such as Italy, Japan, and South Korea with XXX, XXX, and XXX cases reported respectively. Conversely some countries such as Bangladesh are only now reporting their first cases of COVID-19 resulting from importations of infected travellers from affected areas. In response, countries and regions have implemented a wide range of non-pharmaceutical interventions (NPIs). These NPIs have generally been scaled up over time in response to the magnitude of the outbreak in each country. Non-pharmaceutical interventions can be broadly categorised into: i) personal protective measures such as hand hygiene; ii) environmental measures such as disinfection and ventilation; iii) social distancing measures such as school and workplace closures; and iv) travel related measures such as travel restrictions [@pand_flu]. As the first cases were exported from Wuhan City to countries and regions outside mainland China, early efforts focused on containment where infected individuals were rapidly identified and isolated. Contact tracing and active case finding efforts then identified any contacts potentially at risk of infection who were themselves isolated or monitored. Containment efforts thus focused on stopping transmission completely to prevent any community transmission [@anderson2020will]. As case numbers increased and evidence of community transmission became apparent, countries and regions started to introduce a wider range of control measures including travel restrictions, improving public awareness through mass communication, widening surveillance efforts, distributing face masks, and social distancing measures. 
+As of the `r format(Sys.Date(), "%d/%b/%2020")`, over XXXX cases of coronavirus disease (COVID-19) have been confirmed globally across XX countries [REF1, possibly WHO SitRep]. Sustained human-to-human transmission have now been observed in multiple countries or regions outside of mainland China such as Italy, Japan, and South Korea with XXX, XXX, and XXX cases reported, respectively by XXXX [REF2]. Conversely, some countries such as Bangladesh are only now reporting their first cases of COVID-19 resulting from importations of infected travellers from affected areas [REF3]. In response, countries and regions have implemented a wide range of non-pharmaceutical interventions (NPIs). These NPIs have generally been scaled up over time in response to the magnitude of the outbreak in each country [REF4]. Non-pharmaceutical interventions can be broadly categorised into: i) personal protective measures such as hand hygiene; ii) environmental measures such as disinfection and ventilation; iii) social distancing measures such as school and workplace closures; and iv) travel related measures such as travel restrictions [@pand_flu]. As the first cases were exported from Wuhan to countries and regions outside mainland China, early efforts focused on containment where infected individuals were rapidly identified and isolated [REF5]. Contact tracing and active case finding efforts then identified any contacts potentially at risk of infection who were themselves isolated or monitored. Containment efforts thus focused on stopping transmission completely to prevent any community transmission [@anderson2020will]. As case numbers increased and evidence of community transmission became apparent, countries and regions started to introduce a wider range of control measures including travel restrictions, improving public awareness through mass communication, widening surveillance efforts, distributing face masks, and social distancing measures [REF6].
 
-Social distancing (SD) measures can be effective control measures in outbreak settings. These can be broadly defined as: i) isolation, the separation of ill individuals from non-infected individuals; ii) quarantine, the separation of individuals who have been assumed to be exposed and; iii) community containment, an intervention applied to an entire community aimed at reducing contacts and movements including school and workplace closures and restrictions or cancellation of mass gatherings [@wilder]. Social distancing measures are intended to reduce mixing and rates of contact between individuals in the community, therefore reducing rates of potential transmission through a susceptible population.
+Social distancing (SD) measures can be effective control measures in outbreak settings [REF7]. These can be broadly defined as: i) isolation, the separation of ill individuals from non-infected individuals; ii) quarantine, the separation of individuals who have been assumed to be exposed and; iii) community containment, an intervention applied to an entire community aimed at reducing contacts and movements including school and workplace closures and restrictions or cancellation of mass gatherings [@wilder]. Social distancing measures are intended to reduce mixing and rates of contact between individuals in the community, therefore reducing rates of potential transmission to the susceptible population [REF8].
 
-It is important to note that control measures implemented during an epidemic are usually layered with other interventions and are often targeted. As countries and regions start to move towards mitigating the impact of the epidemic, measures are likely to be implemented to varying degrees. In this study, we focus focused on the use and potential effectiveness of social distancing measures for COVID-19 only.
+It is important to note that control measures implemented during an epidemic are usually layered with other interventions and are often targeted. As countries and regions start to move towards mitigating the impact of the epidemic, measures are likely to be implemented to varying degrees [REF9].
+<!-- This is a little vague. We may want to clarify a little bit more? Geographic span? Extent of implementation (e.g., workplace closure of certain sectors)? How much it is being enforced vs. suggested? -->
+In this study, we focus on the use and potential effectiveness of social distancing measures during the current COVID-19 pandemic.
 
 # Methods
 
 ## Interventions implemented
 
-We extracted the date and type of social distancing interventions implemented by/in Wuhan City (China), South Korea, Japan, Hong Kong Special Administrative Region, Singapore, and Italy. These countries/regions were chosen as they were amongst the first affected countries or regions outside of mainland China and at the time of analysis were amongst the top 10 countries with the highest number of COVID-19 cases. Where possible, information on intervention and the date they were implemented were extracted from official government sources such as Ministry of Education websites (see supplementary table X). We categorised the social distancing measures into 7 broad categories as summarised in Table 1. Information and dates of non-pharmaceutical interventions implemented early on in the epidemic such as travel advisories were also extracted (supplementary table X).
+We extracted the date and type of social distancing interventions implemented in Wuhan (Hubei, China), South Korea, Japan, Hong Kong (Special Administrative Region of China), Singapore, and Italy. Apart from Wuhan, the other countries/regions were chosen as they were among the first or most affected places outside of mainland China (at the time of analysis) in the COVID-19 pandemic [REF10].
+
+Where possible, information on intervention and the date they were implemented were extracted from official government sources such as Ministry of Education websites (see supplementary table X). We categorised the social distancing measures into 7 broad categories as summarised in Table 1. Information and dates of other non-pharmaceutical interventions, aside from social distancing measures, implemented early on in the epidemic such as travel advisories were also extracted (supplementary table X).
 
 **Table 1: Summary of social distancing measures considered and/or implemented in response to the COVID-19 epidemic**
 ```{r types_of_interventions}
@@ -108,13 +112,15 @@ df %>% flextable::flextable(cwidth = 3) %>% align()
 
 ## Potential effectiveness of social distancing measures
 
-We searched PubMed and medRxiv for peer-reviewed literature and pre-prints on the potential impact of social distancing interventions implemented thus far in the COVID-19 epidemic. We did not restrict these studies by country. 
+We searched PubMed and medRxiv for peer-reviewed literature and pre-prints on the potential impact of social distancing interventions implemented thus far in the COVID-19 pandemic. We did not restrict these studies by country. 
 
 # Results
 
-SD interventions have been implemented to different degrees by countries and regions affected by the COVID-19 epidemic. Implementation of stringent social distancing measures including the effective lockdown of the city were introduced in Wuhan City on XXXX. The lunar new year holiday means that school and workplace have been closed since XXXX. In response to the COVID-19 epidemic, school holidays have been extended and are still closed as of 11 March 2020. Outside of mainland China, Japan and South Korea reported the first cases of COVID-19 on the 20th January 2020. This was followed quickly by cases reported in Hong Kong (23rd January), Singapore (24th January), and Italy (31 January). In response to these first exported cases, case isolation and contact tracing were implemented by each region or country. Figure 1 shows the timing of interventions in different countries and regions relative to the reported cases over time. The date of the first reported case is also shown to represent the start of contact tracing and case isolation of exported cases. 
+Social distancing measures have been implemented to different degrees by countries and regions affected by the COVID-19 pandemic. The beginning of this pandemic coincidece with the Lunar New Year holiday and winter break in China, for which schools and workplaces were scheduled to close on 17 Jan and 24 Jan 2020, respecively. Due to the outbreak in Wuhan, stringent social distancing measures including intensive travel restrictions were introduced in the city on 23 Jan 2020.
 
-At the time of analysis, the most commonly implemented SD measures in Hubei province (China) and the five countries and regions reporting the highest COVID-19 case numbers outside of mainland China, were school closures followed by remote working and quarantine. Table 2 summarises the SD intervention and the potential effects on mixing patterns. We found a substantial variation in the timing and type of SD interventions adopted by different countries and regions outside of mainland China. Notably Singapore had implemented some partial social distancing measures even before the first case of COVID-19 being reported in-country. We observed that countries affected most recently have implemented SD measures most rapidly and in quick succession. There were also differences in the degree to which SD measures such as school closures have been implemented. For example, school closures in Japan were initially implemented very locally in response to a positive case within the school, then preemptively at the prefecture level, followed by national school closures. We also observed that amongst the non-SD measures that travel restrictions and advice were the first NPIs implemented by each country or region (see Table S1 for the most common non-SD measures).
+In response to the COVID-19 pandemic, school closures have been extended and remain in place as of 11 March 2020 [REF11]. Outside of mainland China, Japan and South Korea reported the first cases of COVID-19 on the 20th January 2020 [REF12]. This was followed quickly by cases reported in Hong Kong (23rd January), Singapore (24th January), and Italy (31 January) [REF13]. In response to these first exported cases, case isolation and contact tracing were implemented by each region or country. Figure 1 shows the timing of interventions in different countries and regions relative to the reported cases over time. The date of the first reported case is also shown to represent the start of contact tracing and case isolation of exported cases. 
+
+At the time of analysis, the most commonly implemented social distancing measures in Wuhan (Hubei, China) and the five countries and regions reporting the highest COVID-19 case numbers outside of mainland China, were school closures followed by remote working and quarantine. Table 2 summarises the social distancing measures and the potential effects on community mixing patterns. We found a substantial variation in the timing and type of social distancing measures adopted by different countries and regions outside of mainland China. Notably, Singapore had implemented some partial social distancing measures even before the first in-country COVID-19 case was reported. We observed that countries affected most recently have implemented SD measures most rapidly and in quick succession. There were also differences in the degree to which social distancing measures, such as school closures, have been implemented. For example, within weeks, school closures in Japan which were initially implemented locally in a few affected schools were preemptively extended to the entire nation [REF14]. We also observed that among non-social distancing measures, travel advisories and restrictions were the first NPIs implemented by each country or region (see Table S1 for the most common non-SD measures).
 
 **Table 2: Summary of social distancing interventions implemented in Wuhan City, China and the 8 countries or regions1 reporting the highest number of COVID-19 cases. Countries and regions considered here are: Hong Kong, Italy, Japan, Singapore, South Korea and Wuhan. Many countries have been implementing quarantine measures of travellers. [The number refers to countries or regions where we have identified exact dates of implementation].**
 ```{r table2}
@@ -135,13 +141,17 @@ knitr::include_graphics("../figures/social-all-time-1.png")
 
 # Discussion
 
-SD interventions have been implemented to different degrees by countries and regions affected by the COVID-19 epidemic. Interventions have been most stringent in Hubei province, where the effective lockdown of cities have affected 40-60 million residents in Hubei province and Wuhan City in particular [@wu2020characteristics and @WHO]. Across other provinces in China, huge public health efforts including quarantine, cancellation of large gatherings, and travel restrictions have been implemented [REF]. Outside of mainland China, countries and regions worst affected by COVID-19 have or have started to introduce SD interventions in efforts to contain and limit the spread of COVID-19. For example, Singapore has implemented extensive contact tracing and quarantine measures for confirmed cases and Italy has implemented nationwide school closures [REF].
+Social distancing measures have been implemented to different degrees by countries and regions affected by the COVID-19 pandemic. Interventions have been most stringent in Hubei province (China), where intensive travel restrictions have affected 40-60 million residents [@wu2020characteristics and @WHO]. 
+<!-- Can we mention Italy has adopted similar measures now? -->
+Across other parts of China, extensive public health efforts including quarantine, cancellation of large gatherings, and travel restrictions have been implemented [REF15]. Outside of mainland China, countries and regions most affected by COVID-19 have or have started to introduce social distancing interventions in efforts to contain and limit the spread of COVID-19. For example, Singapore has conducted extensive contact tracing and quarantine measures for confirmed cases and Italy has enforced nationwide school closures [REF16].
 
-The timing of and the degree to which social distancing measures have been implemented varies between the subset of countries and regions considered here but also globally. For example, some countries and regions such as the USA have implemented reactive and selective local school closures only, whereas Hong Kong, for similar case counts, has introduced a large number of voluntary (e.g. advice on avoiding crowded places) and mandatory (e.g. quarantine, contact tracing, wide-scale proactive school closures) SD measures. It is important to note that most countries and regions have implemented isolation of cases, contact tracing and quarantine in response to the first imported cases from Hubei, China (Japan, Thailand, South Korea, USA, Singapore since mid- to late-January). Other countries have implemented interventions in response to a large number of newly reported cases (Italy and Iran) more recently (supplementary table 3).
+The timing of and the degree to which social distancing measures have been implemented varies between the countries and regions we considered, but also globally. For example, some countries and regions such as the USA have implemented reactive and selective local school closures only, whereas Hong Kong, for similar cumulative case counts, has introduced a large number of voluntary (e.g. advice on avoiding crowded places) and mandatory (e.g. quarantine, contact tracing, wide-scale proactive school closures) social distancing measures [REF17]. It is important to note that most countries and regions have implemented isolation of cases, contact tracing and quarantine in response to the first imported cases from Hubei, China (Japan, Thailand, South Korea, USA, Singapore since mid- to late-January) [REF18]. Other countries have introduced interventions in response to a large number of newly reported cases (Italy and Iran) more recently (supplementary table 3) [REF19].
 
-Many SD interventions have focused on public messaging to encourage behaviour change. For example, encouraging individuals to work remotely, avoid crowded areas, and to restrict movement to essential trips only. As such interventions are not enforced, its effectiveness will be dependent on uptake and compliance by the general public. A recent YouGov survey found that risk perception differed by country [@yougov]. A higher proportion of respondents in Asian countries reported being concerned about their risk of being infected compared to countries in Europe or North America. This is also reflected in self-reported behaviour changes. A majority of respondents in all Asian countries and regions surveyed are avoiding crowded places including 83% in Hong Kong. Encouragement of remote working have also had the greatest reported behaviour change in China and Hong Kong with 67% and 45% reportedly avoiding going to the office respectively. These high figures compared to other countries in Asia, may be due to implementation of remote working for government offices.
+Many social distancing interventions have focused on public messaging to encourage positive behaviour change. For example, encouraging individuals to work remotely, avoid the crowds, and restrict non-essential travel. As such interventions are not enforced, its effectiveness will be dependent on the public compliance. A recent YouGov survey found that risk perception differed by country [@yougov]. A higher proportion of respondents in Asian countries reported being concerned about their risk of being infected compared to European or North American countries. This is also reflected in self-reported positive behaviour changes. A majority of respondents in Asia surveyed are avoiding crowded places (e.g., 83% in Hong Kong). Advocating for remote working have led to the greatest positive behavior China in mainland China and Hong Kong, with 67% and 45% reportedly avoiding going to the office, respectively. These high figures compared to other countries in Asia, may be due to implementation of remote working for government offices.
 
-Outside of Hubei province, China where the 30 days of substantial social distancing layered with the strict movement restrictions in Wuhan City and Hubei have reduced the estimated reproduction number from 2.2 (95% CI: 1.4 - 3.9) to 1.58 (95% CI: 1.34 - 2.07), it is likely too early to be able to evaluate or quantify the true effectiveness of specific social distancing interventions on the epidemic in affected countries or regions [@zhang2020impact]. Indeed as most countries have implemented a range of non-pharmaceutical measures such as travel restrictions, health screenings, and advice such as hand and cough hygiene intended to prompt behaviour change, it is likely impossible to quantify the effectiveness of social distancing in the absence of other control measures. However early studies have found that the relative effectiveness of case isolation and contact tracing was greater than travel restrictions or contact reduction [@lai2020effect]. They additionally found that the rapid implementation of these combined NPIs, conducted one, two, or three weeks earlier could have reduced case numbers by 66%, 86%, and 95%, respectively.
+Outside of Hubei province, China where the 30 days 
+<!-- This is now 45+, YL will update -->
+of substantial social distancing layered with the strict movement restrictions in Wuhan City and Hubei have reduced the estimated reproduction number from 2.2 (95% CI: 1.4 - 3.9) to 1.58 (95% CI: 1.34 - 2.07), it is likely too early to be able to evaluate or quantify the true effectiveness of specific social distancing interventions on the epidemic in affected countries or regions [@zhang2020impact]. Indeed as most countries have implemented a range of non-pharmaceutical measures such as travel restrictions, health screenings, and advice such as hand and cough hygiene intended to prompt behaviour change, it is likely impossible to quantify the effectiveness of social distancing in the absence of other control measures. However early studies have found that the relative effectiveness of case isolation and contact tracing was greater than travel restrictions or contact reduction [@lai2020effect]. They additionally found that the rapid implementation of these combined NPIs, conducted one, two, or three weeks earlier could have reduced case numbers by 66%, 86%, and 95%, respectively.
 
 Studies from pandemic influenza have also shown that the timing and duration of SD interventions will impact its effectiveness. For example, for influenza there are restricted benefits to time-limited interventions, with the potential reduction in mortality by up to 30% being eroded if the control was applied too late or lifted too early [@bootsma]. When considering targeted layered containment strategies, Ferguson et al found that the effectiveness of social distancing, rapid case ascertainment, and targeted prophylaxis were similar, with school closures playing an important role in each scenario, especially if values of R0 were ≤2 [REF]. A systematic review of the effectiveness of social distancing measures for pandemic influenza identified varying levels of evidence for avoiding crowding, workplace measures, and case isolation in the community [@lai2020effect]. These particular SD measures are more resource intensive and are socially and economically disruptive. For COVID-19 most isolation has thus far been in a hospital setting. As more cases are reported in the community, protocols around case isolation may change towards voluntary home isolation or household quarantine. Household quarantine for influenza was found to have an overall effect, but within an affected household could increase risk of infection amongst quarantined individuals. Other resource intensive measures such as contact tracing were found to be effective in reducing influenza transmission when used in combination with other interventions such as quarantine and isolation. However this is not feasible in all settings or sustainable beyond the early phase of an epidemic when there are fewer cases. For influenza where children are known to be important for transmission as they are more susceptible to infection, are more infectious, and contribute to higher person-to-person contact rates, there was evidence that school closures could have a substantial effect on reducing transmission. However, the role of children in transmission of COVID-19 is still unknown. If children have the same or similar role in transmission as for influenza, then we could expect the same level of impact as has been estimated for influenza.
 
