added WHO sit rep case counts - now locked to 13th

--- a/main-article/main-article-bib.bib
+++ b/main-article/main-article-bib.bib
@@ -101,3 +101,9 @@ author  ={{World Health Organisation}}
   year={2020},
   publisher={Cold Spring Harbor Laboratory Press}
 }
+
+@webpage{WorldHealthOrganization:sitrep,
+author = {{World Health Organization}},
+title = {{\textbf{Coronavirus disease (COVID-2019) situation reports}}},
+url = {https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports}
+}
