--- a/main_article/main_article_bib.bib
+++ b/main_article/main_article_bib.bib
@@ -101,3 +101,11 @@ author  ={{World Health Organisation}}
   year={2020},
   publisher={Cold Spring Harbor Laboratory Press}
 }
+
+@article{WHO_sitrep,
+  title={Coronavirus disease 2019 (COVID-19) Situation Report – 52},
+  author={{World Health Organisation}},
+  url={https://www.who.int/docs/default-source/coronaviruse/20200312-sitrep-52-covid-19.pdf?sfvrsn=e2bfc9c0_2},
+  year={2020}
+}
+
